--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -20,9 +20,5 @@ jobs:
       uses: actions/setup-dotnet@v4
       with:
         dotnet-version: 8.0.x
-    - name: WorkDir
-      run: cd src
-    - name: Restore dependencies
-      run: dotnet restore
     - name: Test
-      run: dotnet test --no-build --verbosity normal
+      run: cd src & dotnet test --no-build --verbosity normal
