--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -21,6 +21,5 @@ jobs:
       with:
         dotnet-version: 8.0.x
     - name: Test
-      run: 
-        cd src
-        dotnet test --no-build --verbosity normal
+      working-directory: ./src
+      run: dotnet test --no-build --verbosity normal
