--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -20,6 +20,9 @@ jobs:
       uses: actions/setup-dotnet@v4
       with:
         dotnet-version: 8.0.x
+    - name: Build
+      working-directory: ./src
+      run: dotnet build
     - name: Test
       working-directory: ./src
       run: dotnet test --no-build --verbosity normal
