--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -20,9 +20,13 @@ jobs:
       uses: actions/setup-dotnet@v4
       with:
         dotnet-version: 8.0.x
+    - name: Set UTF-8 encoding
+      run: |
+        echo "LC_ALL=en_US.UTF-8" >> $GITHUB_ENV
+        echo "NUGET_XMLDOC_MODE=skip" >> $GITHUB_ENV  # 避免 XML 文档解析问题
     - name: Build
       working-directory: ./src
-      run: export LANG="zh_CN.UTF-8" & dotnet build
+      run: dotnet build
     - name: Test
       working-directory: ./src
-      run: dotnet test --no-build --verbosity normal
+      run: dotnet test --no-build --logger "console;verbosity=normal;Encoding=UTF-8"
