--- a/src/ExcelTemplate.Test/ExcelTemplate.Test.csproj
+++ b/src/ExcelTemplate.Test/ExcelTemplate.Test.csproj
@@ -7,6 +7,7 @@
 
     <IsPackable>false</IsPackable>
     <IsTestProject>true</IsTestProject>
+    <Charset>UTF-8</Charset>
   </PropertyGroup>
 
   <ItemGroup>
