处理日期样式和样式去重问题

--- a/src/ExcelTemplate/ExcelTemplate.csproj
+++ b/src/ExcelTemplate/ExcelTemplate.csproj
@@ -6,6 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="CompareNETObjects" Version="4.83.0" />
     <PackageReference Include="NPOI" Version="2.7.3" />
   </ItemGroup>
 
