--- a/.github/workflows/nuget-publish.yml
+++ b/.github/workflows/nuget-publish.yml
@@ -6,9 +6,9 @@ name: Publish NuGet Package # Action名称
 on:
   push:
     branches:
-      - master # 监听的分支
+      - main # 监听的分支
     paths: # 监听的文件
-      - 'Directory.Build.props'
+      - 'src/Directory.Build.props'
 
 # 设置运行环境及执行步骤
 # 作用见step name
