--- a/src/Directory.Build.props
+++ b/src/Directory.Build.props
@@ -29,7 +29,7 @@
 			<PackagePath>\</PackagePath>
 		</None>-->
 		<!-- Nuget的自述文件 -->
-		<None Include="$(SolutionDir)README.md">
+		<None Include="$(SolutionDir)../README.md">
 			<Pack>True</Pack>
 			<PackagePath>\</PackagePath>
 		</None>
